Fix: GitHub error #12

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,12 @@
     "func-names": "off",
     "no-process-exit": "off",
     "class-methods-use-this": "off"
-  }
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
 }
