--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_LOCAL_PORT=3000
-DB_URL="mongodb+srv://ahmadalashtar:Ahmad123Alashtar@cluster0.gsycqmt.mongodb.net/?retryWrites=true&w=majority"
+DB_URL="mongodb+srv://ahmadalashtar:Ahmad123Alashtar@cluster0.gsycqmt.mongodb.net/cook?retryWrites=true&w=majority"
