--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongoose": "^7.3.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "yarn-upgrade-all": "^0.6.1"
   },
   "devDependencies": {
