--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "no-console": "warn",
     "func-names": "off",
     "no-process-exit": "off",
+    "no-underscore-dangle": "off",
     "class-methods-use-this": "off"
   },
   "settings": {
