--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "postinstall": "husky install && husky add .husky/pre-commit \"yarn validate-staged\" && husky add .husky/pre-push \"yarn test\""
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "supertest": "^6.3.3",
     "yarn-upgrade-all": "^0.6.1"
   },
   "devDependencies": {
