--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DB_URL=mongodb+srv://ahmadalashtar:Ahmad123Alashtar@cluster0.gsycqmt.mongodb.net
 APP_SECRET=a7ThbaAD8YALAj51AOuASk31y18t9eTy0lkUmdi3LqABmInu
 GAPP_CLIENT_ID=517181456125-27qfhr47ro7un0rmut6p72im23c2cp5g.apps.googleusercontent.com
 GAPP_CLIENT_SECRET=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
+
+FB_CLIENT_ID=819193632852571
+FB_CLIENT_SECRET=85ea589a6caa950f5aba1ee349b3110b
