--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_LOCAL_PORT=3000
 
-DB_URL=mongodb+srv://ahmadalashtar:Ahmad123Alashtar@cluster0.gsycqmt.mongodb.net/cook?retryWrites=true&w=majority
+DB_URL=mongodb://127.0.0.1:27017/cooks-kingdom
 
 APP_SECRET=a7ThbaAD8YALAj51AOuASk31y18t9eTy0lkUmdi3LqABmInu
 GAPP_CLIENT_ID=517181456125-27qfhr47ro7un0rmut6p72im23c2cp5g.apps.googleusercontent.com
