--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.2",
+    "mongoose": "^7.4.0",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
