--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.2",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
