--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/app.js",
-    "test": "yarn validate && jest --passWithNoTests",
+    "test": "yarn validate && jest --passWithNoTests --runInBand",
     "lint": "eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json)\"",
     "validate": "yarn format && yarn lint",
@@ -21,7 +21,6 @@
     "express": "^4.17.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
-    "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.2",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
