User routes done!

--- a/.env
+++ b/.env
@@ -7,5 +7,11 @@ APP_SECRET=a7ThbaAD8YALAj51AOuASk31y18t9eTy0lkUmdi3LqABmInu
 GAPP_CLIENT_ID=517181456125-27qfhr47ro7un0rmut6p72im23c2cp5g.apps.googleusercontent.com
 GAPP_CLIENT_SECRET=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
 
+GOOGLE_CLOUD_PROJECT_ID=lucid-bebop-394118
+GOOGLE_CLOUD_BUCKET_NAME=cloud-storage-capstone
+
 FB_CLIENT_ID=819193632852571
 FB_CLIENT_SECRET=85ea589a6caa950f5aba1ee349b3110b
+
+USER_EMAIL=huntertttv1@gmail.com
+USER_PASSWORD=illmtwnzgvnbsdzw
