--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
+    "winston": "^3.10.0",
     "yarn-upgrade-all": "^0.6.1"
   },
   "devDependencies": {
