--- a/src/docs/Auth/localAuth.yaml
+++ b/src/docs/Auth/localAuth.yaml
@@ -19,9 +19,9 @@ paths:
                   type: string
                   description: last name of user
                   example: Doe
-                name:
+                username:
                   type: string
-                  description: name of user
+                  description: username of user
                   example: JohnDoe
                 email:
                   type: string
@@ -47,9 +47,9 @@ paths:
                     type: string
                     description: last name of user
                     example: Doe
-                  name:
+                  username:
                     type: string
-                    description: name of user
+                    description: username of user
                     example: JohnDoe
                   email:
                     type: string
