--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
